# emuBOOB

./: .gitignore  Cargo.toml  README.md  deployment.sh  emuBOOB.1  reg
src/: ariphmetics.rs  cli.yaml  cmp.rs  cpu.rs  dump.rs  instructions.rs  intstructions.rs  main.rs  mcs.rs  mem.rs
src/cmp/: dictionary.rs  translator.rs
src/mcs/: cpu.rs  dump.rs  instructions.rs  mem.rs
test_prog/: bounce.asm  degree.asm  multiply.asm  test.asm
test_target/: test
