[package]
name = "sp_3-bit"
version = "0.1.0"
authors = ["MrZloHex <zlo.alex.it@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
#tui = "0.15"
#termion = "1.5"
#ux = "0.1"